kubernetes/apps/base/home-system/qui/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qui
  namespace: home-system
spec:
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  hostnames:
    - 'qui.${CLUSTER_DOMAIN}'
  rules:
    - backendRefs:
        - name: qui
          port: 80
          weight: 100
